Refine `CLAUDE.md` with enhanced stack details, domain/UI structure, i18n patterns, security flow, validation framework, and updated deployment notes.